--- a/Kernel/configs/spes.config.json
+++ b/Kernel/configs/spes.config.json
@@ -11,7 +11,7 @@
             {
                 "repo": "https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b",
                 "branch": "lineage-20.0",
-                "name": "clang",
+                "name": "clang-r450784d",
                 "binaryEnv": [
                     "bin"
                 ]
