--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -167,6 +167,9 @@ jobs:
                 *.rar)
                   unrar x "$filename" $toolchain_name
                   ;;
+                *.tar.zst)
+                  tar --zstd -xvf neutron-clang-10032024.tar.zst -C $toolchain_name
+                  ;;
                 *)
                   echo "unknown file type: $filename"
                   ;;
@@ -389,9 +392,9 @@ jobs:
           if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz-dtb" ]; then
             cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz-dtb ./AnyKernel3/
           else
-            if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image" ]; then
-              cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image ./AnyKernel3/
-            fi
+            #if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image" ]; then
+            #cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image ./AnyKernel3/
+            #fi
             if [ -e "${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz" ]; then
               cp -f ${{ env.OUT_DIR }}/arch/${{ env.ARCH }}/boot/Image.gz ./AnyKernel3/
             fi
